<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.uw.tcss450.uiandnavigationlab.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_secondHomeFragment"
            app:destination="@id/secondHomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/secondHomeFragment"
        android:name="edu.uw.tcss450.uiandnavigationlab.ui.home.SecondHomeFragment"
        android:label="@string/title_second_home"
        tools:layout="@layout/fragment_second_home">
        <action
            android:id="@+id/action_secondHomeFragment_to_thirdHomeFragment"
            app:destination="@id/thirdHomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/thirdHomeFragment"
        android:name="edu.uw.tcss450.uiandnavigationlab.ui.home.ThirdHomeFragment"
        android:label="@string/title_third_home"
        tools:layout="@layout/fragment_third_home" />
    <fragment
        android:id="@+id/navigation_blogs"
        android:name="edu.uw.tcss450.uiandnavigationlab.ui.blog.BlogListFragment"
        android:label="@string/title_blogs"
        tools:layout="@layout/fragment_blog_list" >
        <action
            android:id="@+id/action_navigation_blogs_to_blogPostFragment"
            app:destination="@id/blogPostFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_incrementor"
        android:name="edu.uw.tcss450.uiandnavigationlab.ui.incrementor.IncrementorFragment"
        android:label="@string/title_incrementer"
        tools:layout="@layout/fragment_incrementor" />
    <fragment
        android:id="@+id/blogPostFragment"
        android:name="edu.uw.tcss450.uiandnavigationlab.ui.blog.BlogPostFragment"
        android:label="@string/title_blogs" >
        <argument
            android:name="blog"
            app:argType="edu.uw.tcss450.uiandnavigationlab.ui.blog.BlogPost" />
    </fragment>




    <fragment
        android:id="@+id/navigation_weather"
        android:name="edu.uw.tcss450.uiandnavigationlab.ui.weather.WeatherFragment"
        android:label="@string/label_weather"
        tools:layout="@layout/fragment_weather">
    </fragment>


    <fragment
        android:id="@+id/navigation_chat"
        android:name="edu.uw.tcss450.uiandnavigationlab.ui.chat.ChatFragment"
        android:label="@string/label_chat"
        tools:layout="@layout/fragment_chat_list">
    </fragment>



    <fragment
        android:id="@+id/navigation_contacts"
        android:name="edu.uw.tcss450.uiandnavigationlab.ui.contacts.ContactFragment"
        android:label="@string/label_contacts"
        tools:layout="@layout/fragment_contact">
    </fragment>
</navigation>