<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/weather_background"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_email"
        android:layout_width="285dp"
        android:layout_height="67dp"
        android:text="@string/label_home"
        android:textAlignment="center"
        android:textColor="@color/secondaryTextColorFade"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="94dp"
        android:layout_weight="1"
        android:background="#3CF1EBF1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_chat_black_24"
            app:tint="#FFFFFF" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/text_current_message_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_home_message_notification"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/sunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="06:40 AM"
            android:textSize="14dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_time"
        android:layout_width="200dp"
        android:layout_height="63dp"
        android:text="@string/label_time"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_email" />

    <LinearLayout
        android:id="@+id/overviewContainer"
        android:layout_width="380dp"
        android:layout_height="269dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_time">

        <TextView
            android:id="@+id/main_weather_currentCityState"
            android:layout_width="177dp"
            android:layout_height="29dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:text="@string/tv_weather_currentCityState"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="italic"

            app:layout_constraintBottom_toTopOf="@+id/main_weather_currentIcon"
            app:layout_constraintEnd_toEndOf="@+id/main_weather_currentIcon"
            app:layout_constraintStart_toStartOf="@+id/main_weather_currentIcon"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/main_weather_currentIcon"
            android:layout_width="196dp"
            android:layout_height="145dp"
            android:contentDescription="@string/PLACEHOLDER"
            android:src="@drawable/icon01d"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="142dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/main_weather_currentIcon"
            app:layout_constraintStart_toStartOf="@+id/main_weather_currentIcon">

            <TextView
                android:id="@+id/main_weather_currentDescriptionDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="@string/tv_weather_descriptionDefault"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="63dp"
                android:layout_height="26dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_weather_currentDescriptionDefault">

                <TextView
                    android:id="@+id/main_weather_currentTemperatureDefault"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:fontFamily="sans-serif-thin"
                    android:paddingStart="0dp"
                    android:text="@string/tv_weather_temperatureDefault"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_weather_current_tempunits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/misc_temp_unit_display_imperial"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>